--- a/booking2.css
+++ b/booking2.css
@@ -105,6 +105,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
     font-family: courier;
+    padding-right: 50px;
     margin-bottom: 4px;
 }
 .but2:hover{
